--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ add_library( glad SHARED
   third_party/KHR/khrplatform.h
   third_party/glad/glad.c
   third_party/glad/glad.h
-)
+ "src/geometry/Mesh.h")
 
 target_compile_definitions( glad
   PRIVATE GLAD_GLAPI_EXPORT_BUILD
@@ -96,10 +96,10 @@ add_executable(
 	src/geometry/Icosahedron.h
 	src/geometry/Plane.h
 	src/geometry/Sphere.h
-	src/geometry/Mesh.h
-	src/geometry/Mesh.cpp
+	src/geometry/MeshData.h
+	src/geometry/MeshData.cpp
 	${IMGUI}
- )
+  "src/geometry/Mesh.h")
 
 target_compile_definitions(gaussian-tracing PRIVATE IMGUI_IMPL_OPENGL_LOADER_GLAD)
 target_link_libraries(gaussian-tracing glfw glad ${OPENGL_gl_LIBRARY})
