[Refactor] Change shader file name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ include_directories(third_party/ImGuiFileDialog)
 include_directories(third_party/tinyobjloader)
 
 set(SHADERS
-	${CMAKE_CURRENT_SOURCE_DIR}/shaders/shader.cu
+	${CMAKE_CURRENT_SOURCE_DIR}/shaders/tracer.cu
 	${CMAKE_CURRENT_SOURCE_DIR}/shaders/tracer.cuh
 	${CMAKE_CURRENT_SOURCE_DIR}/src/Parameters.h
 	${CMAKE_CURRENT_SOURCE_DIR}/src/vector_math.h
@@ -101,7 +101,7 @@ add_executable(
 	src/geometry/Primitives.cpp
 	${IMGUI}
 	third_party/ImGuiFileDialog/ImGuiFileDialog.cpp
-	shaders/shader.cu
+	shaders/tracer.cu
 	shaders/tracer.cuh
  )
 
